--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,21 +26,31 @@
                 <div class="row row-cols-auto">
                     <div class="col">
                         <div class="card" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="/images/MuseScore_card_index.png" class="card-img-top" alt="Carta de 'Transcripciones musicales'.">
                             <div class="card-body">
                                 <h5 class="card-title">Transcripciones musicales</h5>
                                 <p class="card-text">Elijo canciones de mi gusto y las paso a partitura a oído.</p>
-                                <a href="#" class="btn btn-primary">Ir</a>
+                                <a href="/music_scores" class="btn btn-primary">Ir</a>
                             </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="/images/MuseScore_logo.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Proyectos</h5>
                                 <p class="card-text">Echa un vistazo a mis proyectos de programación.</p>
-                                <a href="#" class="btn btn-primary">Ir</a>
+                                <a href="/programming" class="btn btn-primary">Ir</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card" style="width: 18rem;">
+                            <img src="/images/music_cool_bg.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Arte</h5>
+                                <p class="card-text">¿Qué es el arte?</p>
+                                <a href="/art" class="btn btn-primary">Ir</a>
                             </div>
                         </div>
                     </div>
@@ -48,17 +58,14 @@
                         <div class="card" style="width: 18rem;">
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Dibujos</h5>
-                                <p class="card-text">¿Qué es el arte?</p>
-                                <a href="#" class="btn btn-primary">Ir</a>
+                                <h5 class="card-title">Misceláneo</h5>
+                                <p class="card-text">Cosas que no encajan en las otras categorías... supongo.</p>
+                                <a href="/misc" class="btn btn-primary">Ir</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-
-
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
