--- a/views/art.ejs
+++ b/views/art.ejs
@@ -13,9 +13,9 @@
     <%- include ("partials/navbar") %>
 
         <div class="container mt-4">
-            <h1>Otros</h1>
+            <h1>Arte</h1>
             <hr>
-            Contenido misceláneo...
+            Dibujos y más...
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
