--- a/views/music_scores.ejs
+++ b/views/music_scores.ejs
@@ -12,8 +12,38 @@
 <body>
     <%- include ("partials/navbar") %>
 
-        <h1>Transcripciones musicales</h1>
-        Partituras...
+        <div class="container mt-4">
+            <h1>Transcripciones musicales</h1>
+            <hr>
+            <p>Partituras...</p>
+
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <%- include ("partials/music_score_card", 
+                    { title: "Minesweeper Plus (Solo Piano Arrangement)",
+                        description: "Canción de título del videojuego Buscaminas Plus, arreglada para piano.",
+                        musescoreLink: "https://musescore.com/user/29799976/scores/29763239/s/wXh-K8",
+                        pdfLink: null,
+                        youtubeLink: "https://www.youtube.com/watch?v=4hFoBWXBL7g"}) %>
+                </div>
+                <div class="col">
+                    <%- include ("partials/music_score_card", 
+                    { title: "Gourmet Race",
+                        description: "Transcripción fiel de la canción Gourmet Race, del videojuego Kirby Super Star.",
+                        musescoreLink: null,
+                        pdfLink: null,
+                        youtubeLink: null}) %>
+                </div>
+                <div class="col">
+                    <%- include ("partials/music_score_card", 
+                    { title: "Floor 1 Boss",
+                        description: "Transcripción fiel de la canción , del videojuego Kirby Super Star.",
+                        musescoreLink: "https://musescore.com/chinobix/scores/6192617",
+                        pdfLink: null,
+                        youtubeLink: null}) %>
+                </div>
+            </div>
+        </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
