Imágenes para cartas en la página principal
Se añadieron imágenes de portada a cada carta en la página principal.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,9 +36,9 @@
                     </div>
                     <div class="col">
                         <div class="card" style="width: 18rem;">
-                            <img src="/images/MuseScore_logo.png" class="card-img-top" alt="...">
+                            <img src="/images/Coding_card_index.png" class="card-img-top" alt="Carta de 'Programación'.">
                             <div class="card-body">
-                                <h5 class="card-title">Proyectos</h5>
+                                <h5 class="card-title">Programación</h5>
                                 <p class="card-text">Echa un vistazo a mis proyectos de programación.</p>
                                 <a href="/programming" class="btn btn-primary">Ir</a>
                             </div>
@@ -46,7 +46,7 @@
                     </div>
                     <div class="col">
                         <div class="card" style="width: 18rem;">
-                            <img src="/images/music_cool_bg.jpg" class="card-img-top" alt="...">
+                            <img src="/images/Art_card_index.png" class="card-img-top" alt="Carta de 'Arte'.">
                             <div class="card-body">
                                 <h5 class="card-title">Arte</h5>
                                 <p class="card-text">¿Qué es el arte?</p>
@@ -56,7 +56,7 @@
                     </div>
                     <div class="col">
                         <div class="card" style="width: 18rem;">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="/images/Misc_card_index.png" class="card-img-top" alt="Carta de 'Misceláneo'.">
                             <div class="card-body">
                                 <h5 class="card-title">Misceláneo</h5>
                                 <p class="card-text">Cosas que no encajan en las otras categorías... supongo.</p>
