se agrego style de 200px a las img para que mantengan mismo tamaño

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
                 <div class="row row-cols-auto">
                     <div class="col">
                         <div class="card" style="width: 18rem;">
-                            <img src="/images/MuseScore_card_index.png" class="card-img-top" alt="Carta de 'Transcripciones musicales'.">
+                            <img src="/images/MuseScore_card_index.png" class="card-img-top" alt="Carta de 'Transcripciones musicales'." style="height: 200px;">
                             <div class="card-body">
                                 <h5 class="card-title">Transcripciones musicales</h5>
                                 <p class="card-text">Elijo canciones de mi gusto y las paso a partitura a oído.</p>
@@ -36,7 +36,7 @@
                     </div>
                     <div class="col">
                         <div class="card" style="width: 18rem;">
-                            <img src="/images/Coding_card_index.png" class="card-img-top" alt="Carta de 'Programación'.">
+                            <img src="/images/Coding_card_index.png" class="card-img-top" alt="Carta de 'Programación'." style="height: 200px;">
                             <div class="card-body">
                                 <h5 class="card-title">Programación</h5>
                                 <p class="card-text">Echa un vistazo a mis proyectos de programación.</p>
@@ -46,7 +46,7 @@
                     </div>
                     <div class="col">
                         <div class="card" style="width: 18rem;">
-                            <img src="/images/Art_card_index.png" class="card-img-top" alt="Carta de 'Arte'.">
+                            <img src="/images/Art_card_index.png" class="card-img-top object-fit-cover" alt="Carta de 'Arte'." style="height: 200px;">
                             <div class="card-body">
                                 <h5 class="card-title">Arte</h5>
                                 <p class="card-text">¿Qué es el arte?</p>
@@ -56,7 +56,7 @@
                     </div>
                     <div class="col">
                         <div class="card" style="width: 18rem;">
-                            <img src="/images/Misc_card_index.png" class="card-img-top" alt="Carta de 'Misceláneo'.">
+                            <img src="/images/Misc_card_index.png" class="card-img-top" alt="Carta de 'Misceláneo'." style="height: 200px;">
                             <div class="card-body">
                                 <h5 class="card-title">Misceláneo</h5>
                                 <p class="card-text">Cosas que no encajan en las otras categorías... supongo.</p>
