--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Chinō</a>
+        <a class="navbar-brand" href="/">Página personal</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -8,35 +8,23 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Inicio</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="/music_scores">Partituras</a>
                 </li>
-                
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Más
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/programming">Programación</a></li>
-                        <li><a class="dropdown-item" href="/art">Arte</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="/misc">Misceláneo</a></li>
-                        </ul>
-                    </li>
-                    
                 <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Perfil</a>
+                    <a class="nav-link" href="/programming">Programación</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/art">Arte</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/misc">Misceláneo</a>
                 </li>
             </ul>
             <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Buscar Partituras..." aria-label="Search">
+                <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Buscar</button>
             </form>
         </div>
     </div>
+
 </nav>
